src/css/main.css
/* ... */
li.active .ic_flasher {
    background-image: url("./../../images/icons/cf_icon_flasher_white.svg");
}

.ic_sitl {
    background-image: url("./../../images/icons/cf_icon_sitl_grey.svg");
}

.ic_sitl:hover {
    background-image: url("./../../images/icons/cf_icon_sitl_white.svg");
}

li.active .ic_sitl {
    background-image: url("./../../images/icons/cf_icon_sitl_white.svg");
}

.ic_calibration {
    background-image: url("./../../images/icons/cf_icon_cal_grey.svg");
}

.ic_calibration:hover {
    background-image: url("./../../images/icons/cf_icon_cal_white.svg");
}

li.active .ic_calibration {
    background-image: url("./../../images/icons/cf_icon_cal_white.svg");
}

/* SPARE Tab-Icons */
.ic_failsafe {
    background-image: url("./../../images/icons/cf_icon_failsafe_grey.svg");
}

.ic_failsafe:hover {
    background-image: url("./../../images/icons/cf_icon_failsafe_white.svg");
}

li.active .ic_failsafe {
    background-image: url("./../../images/icons/cf_icon_failsafe_white.svg");
}

.ic_backup {
    background-image: url("./../../images/icons/cf_icon_backup_grey.svg");
}

.ic_backup:hover {
    background-image: url("./../../images/icons/cf_icon_backup_white.svg");
}

li.active .ic_backup {
    background-image: url("./../../images/icons/cf_icon_backup_white.svg");
}

.ic_wizzard {
    background-image: url("./../../images/icons/cf_icon_wizard_grey.svg");
}

.ic_wizzard:hover {
    background-image: url("./../../images/icons/cf_icon_wizard_white.svg");
}

li.active .ic_wizzard {
    background-image: url("./../../images/icons/cf_icon_wizard_white.svg");
}

.ic_advanced {
    background-image: url("./../../images/icons/cf_icon_advanced_grey.svg");
}

.ic_advanced:hover {
    background-image: url("./../../images/icons/cf_icon_advanced_white.svg");
}

li.active .ic_advanced {
    background-image: url("./../../images/icons/cf_icon_advanced_white.svg");
}

.ic_mission {
    background-image: url("./../../images/icons/cf_icon_mission_grey.svg");
}

.ic_mission:hover {
    background-image: url("./../../images/icons/cf_icon_mission_white.svg");
}

li.active .ic_mission {
    background-image: url("./../../images/icons/cf_icon_mission_white.svg");
}

.ic_mixer {
    background-image: url("./../../images/icons/cf_icon_mixer_grey.svg");
}

.ic_mixer:hover {
    background-image: url("./../../images/icons/cf_icon_mixer_white.svg");
}

li.active .ic_mixer {
    background-image: url("./../../images/icons/cf_icon_mixer_white.svg");
}

.ic_mag {
    background-image: url("./../../images/icons/cf_icon_mag_grey.svg");
}

.ic_mag:hover {
    background-image: url("./../../images/icons/cf_icon_mag_white.svg");
}

li.active .ic_mag {
    background-image: url("./../../images/icons/cf_icon_mag_white.svg");
}

.ic_search {
    background-image: url("./../../images/icons/search-gray.svg");
}

.ic_search:hover {
    background-image: url("./../../images/icons/search-white.svg");
}



#content {
    margin-top: 0;
    padding: 0;
    height: calc(100% - 145px);
    /*  (port picker 105px, log CLOSED 25px, status bar: 20px + padding) - was: calc(100% - 171px)*/
    background-color: white;
    overflow-x: hidden;
    overflow-y: auto;
    border: 0 solid #848484;
    -webkit-transform: rotateX(0deg); /* DO NOT REMOVE! this fixes the UI freezing bug on MAC OS X */
    transition: all 0.3s;
}

#content.logopen {
    margin-top: 0;
    padding: 0;
    height: calc(100% - 234px); /*  (port picker, log OPEN, status bar: 20px + padding) - was: calc(100% - 171px)*/
    background-color: white;
    overflow-x: hidden;
    overflow-y: auto;
    border: 0 solid #848484;
    -webkit-transform: rotateX(0deg); /* DO NOT REMOVE! this fixes the UI freezing bug on MAC OS X */
    transition: all 0.5s;
    /* Cause the height to shrink to contain its floated contents while log is open */
}

#content.loading {
    overflow-y: hidden;
}

#content.loading > * {
    opacity: 0;
}

#status-bar {
    position: fixed;
    bottom: 0;
    width: calc(100% - 20px);
    height: 20px;
    line-height: 20px;
    padding: 0 10px 0 10px;
    border-top: 1px solid #7d7d79;
    background-color: #bfbeb5;
}

#status-bar div {
    float: left;
    padding-right: 10px;
    margin-right: 10px;
    border-right: 1px solid #7d7d79;
}

#status-bar .version {
    float: right;
    margin: 0;
    padding: 0;
    border: 0;
}

#cache {
    display: none;
}

.data-loading {
    z-index: 10000;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    background: url('./../../images/loading-bars.svg') no-repeat center 45%;
    background-color: #FFF;
}

#content.loading .data-loading {
    opacity: 1;
}

.data-loading p {
    position: relative;
    top: calc(45% + 45px);
    text-align: center;
    font-weight: bold;
}

dialog {
    background-color: white;
    padding: 1em;
    height: auto;
    margin: auto auto;
    position: absolute;
    width: 50%;
    border-radius: 3px;
    border: 1px solid silver;
}

/* Border of the Tab */

/* Tab Title */
.tab_title {
    border-bottom: 1px solid #37a8db;
    font-size: 20px;
    line-height: 24px;
    height: 30px;
    font-family: 'open_sanslight', Arial, serif;
    margin-bottom: 15px;
}

.tab_subtitle {
    border-bottom: 1px solid #37a8db;
    font-size: 1.5em;
    line-height: 1.5em;
    height: 25px;
    font-family: 'open_sanslight', Arial, serif;
    margin-bottom: 8px;
}

.tab_subtitle--no-border {
    border: none;
}

/* Note */
.note {
    background-color: #fff7cd;
    border: 1px solid #ffe55f;
    margin-bottom: 7px;
    margin-top: 3px;
    border-radius: 3px;
    font-size: 11px;
    font-family: 'open_sansregular', Arial, serif;
}

.note--big {
    font-size: 1.15em;
    padding: 0.6em;
}

.note_spacer {
    padding: 5px 7px 5px 7px;
}

.tab_wrapper {
    padding: 20px 15px 15px 15px;

}

.content_wrapper {
    padding: 20px;
    position: relative;
}
/* ... */

